alertLogs methods added
